Added PermGen to config panel. Added a few tooltips.